# calculate_area

./: Makefile  README.md  pyproject.toml
calc_area/: calc.py  cli.py  settings.py
calc_area/calculations/: circle.py  rectangle.py  sphere.py  square.py  triangle.py
calc_area/scripts/: start_app.py
tests/: test_calc_area.py
